[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scitrera-ext-cachetools"
version = "0.0.1"
authors = [
    { name = "Scitrera LLC" },
]
description = "Metapackage for sync and asyncio cachetools"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scitrera-app-framework",
    "cachetools",
    "asyncache"
]

[project.urls]
Homepage = "https://github.com/scitrera/scitrera-ext-cachetools-python"
Issues = "https://github.com/scitrera/scitrera-ext-cachetools-python/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = [
    "scitrera_ext_cachetools",
    "scitrera_ext_cachetools.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"